# RPGDash

./: .gitignore  .gitmodules  CMakeLists.txt
contrib/gwen/: CMakeLists.txt
contrib/gwen/Gwen/: BaseRender.h  FrameBuffer.h  Gwen.h  Precompiled.h  Utility.cpp
contrib/gwen/Gwen/Controls/: Base.h  DrawPanel.cpp  DrawPanel.h
contrib/gwen/Gwen/Input/: SDL3.h
contrib/gwen/Gwen/Renderers/: OpenGL.cpp  OpenGL.h
source/: AppMain.cpp  AppMain.hpp  Video.cpp  Video.hpp  precompiled.hpp
source/Dialogs/: MainDialog.cpp  MainDialog.hpp
source/structures/: antecedentes.cpp  antecedentes.hpp  atributos.cpp  atributos.hpp  classes.cpp  classes.hpp  itens.hpp  personagens.cpp  personagens.hpp
